--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="textbox"> 
             <h1>Hi, I am <span>Candid Pradhan</span> and <br>I am a Web Developer!</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed molestiae soluta expedita ea nihil veniam eius iste,<br> natus quo architecto exercitationem reiciendis facere labore corporis corrupti deleniti quidem voluptate repudiandae?</p>
-            <button class="cv-btn">Download CV</button>
+            <a href="Candid Pradhan.pdf" download="Candid Pradhan.pdf"><button class="cv-btn">Download CV</button></a>
             <div class="icons">
                 <a href="https://github.com/candidcodes"><i class="ri-github-fill"></i></a>
                 <a href="https://www.facebook.com/candid.pradhan/?viewas=100000686899395&show_switched_toast=0&show_invite_to_follow=0&show_switched_tooltip=0&show_podcast_settings=0&show_community_review_changes=0&show_community_rollback=0&show_follower_visibility_disclosure=0"><i class="ri-facebook-fill"></i></a>
