changed services to project

--- a/index.html
+++ b/index.html
@@ -215,41 +215,46 @@
 
 
     <section class="services" id="services">
-        <h1>My Services</h1>
+        <h1>My Projects</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est sint maxime accusantium.</p>
         <div class="service-row">
             <div class="service-col">
-                <h3><i class="ri-code-s-slash-line"></i></h3>
-                <h5>WEB-DEVELOPMENT</h5>
-                <p>Graduating from Patan Multiple Campus, I excelled in software development,
-                earning various Experience and Skill. My strong academic foundation is
-                complemented by active participation in extracurricular activities or clubs, where I 
-                developed valuable leadership/communication/teamwork skills. Throughout my educational journey, 
-                I embraced challenges, consistently seeking growth. I am eager to apply my well-rounded education 
-                to future endeavors.</p>
+                <h5>Weather-App</h5>
+                <div class="project-img weather-app-img"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet nemo totam earum 
+                    voluptate natus suscipit sit cum sint! Magnam officia facilis neque. Qui quia natus 
+                    aliquam. Culpa totam aliquam impedit dicta, assumenda nostrum!</p>
+                <div class="button-container">
+                    <button class="btn">Live Link</button>
+                    <button class="btn">Source Code</button>
+                </div>
             </div>
             <div class="service-col">
-                <h3><i class="ri-camera-fill"></i></h3>
-                <h5>PHOTOGRAPHY</h5>
-                <p>Graduating from Patan Multiple Campus, I excelled in software development,
-                earning various Experience and Skill. My strong academic foundation is
-                complemented by active participation in extracurricular activities or clubs, where I 
-                developed valuable leadership/communication/teamwork skills. Throughout my educational journey, 
-                I embraced challenges, consistently seeking growth. I am eager to apply my well-rounded education 
-                to future endeavors.</p>
+                <h5>To-Do List</h5>
+                <div class="project-img todo-list-img"></div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae a hic omnis quas 
+                    deleniti laudantium aliquid doloribus! Error, iure et non repudiandae enim architecto
+                    totam reprehenderit doloribus animi dolorum iusto magnam. Consectetur, incidunt.
+                </p>
+                <div class="button-container">
+                    <button class="btn">Live Link</button>
+                    <button class="btn">Source Code</button>
+                </div>
             </div>
             <div class="service-col">
-                <h3><i class="ri-mail-open-fill"></i></h3>
-                <h5>E-MAIL</h5>
-                <p>Graduating from Patan Multiple Campus, I excelled in software development,
-                earning various Experience and Skill. My strong academic foundation is
-                complemented by active participation in extracurricular activities or clubs, where I 
-                developed valuable leadership/communication/teamwork skills. Throughout my educational journey, 
-                I embraced challenges, consistently seeking growth. I am eager to apply my well-rounded education 
-                to future endeavors.</p>
+                <h5>Expense Tracker</h5>
+                <div class="project-img expense-tracker-img"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero praesentium dolor quam 
+                    exercitationem iure quaerat. Illum maxime vitae, quas dolores autem maiores, impedit, 
+                    explicabo iure similique corporis inventore voluptatum? Tenetur aperiam illo quae.</p>
+                <div class="button-container">
+                    <button class="btn">Live Link</button>
+                    <button class="btn">Source Code</button>
+                </div>
             </div>
         </div>
     </section>
+    
 
     <section class="cta">
         <h1>Let's Build Your Website Together</h1>
